* add description for /products/search/:searchstring * add controller vor /products
* setup route /products/search/:searchstring in router

* give user elisaapi permissions to access to transformed schema

* use dbcrawler for schema.sql and permissions.sql to fix grant-error

* add tests for /products/search
