# backend/server/doc/doc/swagger.json
@@ -530,6 +530,53 @@
                     }
                 }
             }
+        },
+        "/products/search/{searchstring}": {
+            "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Find products by their name non case sensitiv.",
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "x-access-token",
+                        "in": "header",
+                        "description": "JWT for user authorization.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "searchstring",
+                        "description": "String to search for.",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "products": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/Product"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Failed to authenticate token.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -698,6 +745,18 @@
                     "$ref": "#/definitions/ItemValues"
                 }
             ]
+        },
+        "Product": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "description": "Name of product."
+                }
+            }
         },
         "Error": {
             "type": "object",
